// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircularProgress should merge the transform style if it exists 1`] = `
<span
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="20"
  class="rmd-circular-progress rmd-circular-progress--centered"
  id="progress"
  role="progressbar"
  style="transform: translateX(20px);"
>
  <svg
    class="rmd-circular-progress__svg rmd-circular-progress__svg--animate rmd-circular-progress__svg--determinate"
    style="transform: rotate(126deg);"
    viewBox="0 0 66 66"
  >
    <circle
      class="rmd-circular-progress__circle rmd-circular-progress__circle--animate rmd-circular-progress__circle--determinate"
      cx="33"
      cy="33"
      r="30"
      style="stroke-dashoffset: 149.6;"
    />
  </svg>
</span>
`;

exports[`CircularProgress should render correctly 1`] = `
<div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    class="rmd-circular-progress rmd-circular-progress--centered"
    id="progress"
    role="progressbar"
  >
    <svg
      class="rmd-circular-progress__svg rmd-circular-progress__svg--indeterminate"
      viewBox="0 0 66 66"
    >
      <circle
        class="rmd-circular-progress__circle rmd-circular-progress__circle--indeterminate"
        cx="33"
        cy="33"
        r="30"
      />
    </svg>
  </span>
</div>
`;

exports[`CircularProgress should render correctly 2`] = `
<div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    class="rmd-circular-progress rmd-circular-progress--centered"
    id="progress"
    role="progressbar"
  >
    <svg
      class="rmd-circular-progress__svg rmd-circular-progress__svg--indeterminate"
      viewBox="0 0 66 66"
    >
      <circle
        class="rmd-circular-progress__circle rmd-circular-progress__circle--indeterminate"
        cx="33"
        cy="33"
        r="30"
      />
    </svg>
  </span>
</div>
`;

exports[`CircularProgress should render correctly 3`] = `
<div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    class="rmd-circular-progress"
    id="progress"
    role="progressbar"
  >
    <svg
      class="rmd-circular-progress__svg rmd-circular-progress__svg--indeterminate"
      viewBox="0 0 66 66"
    >
      <circle
        class="rmd-circular-progress__circle rmd-circular-progress__circle--indeterminate"
        cx="33"
        cy="33"
        r="30"
      />
    </svg>
  </span>
</div>
`;

exports[`CircularProgress should support a small variant 1`] = `
<span
  aria-valuemax="100"
  aria-valuemin="0"
  class="rmd-circular-progress rmd-circular-progress--centered rmd-circular-progress--small"
  id="small=pgoress"
  role="progressbar"
>
  <svg
    class="rmd-circular-progress__svg rmd-circular-progress__svg--indeterminate"
    viewBox="0 0 66 66"
  >
    <circle
      class="rmd-circular-progress__circle rmd-circular-progress__circle--indeterminate"
      cx="33"
      cy="33"
      r="30"
    />
  </svg>
</span>
`;

exports[`CircularProgress should support a small variant 2`] = `
<span
  aria-valuemax="100"
  aria-valuemin="0"
  class="rmd-circular-progress rmd-circular-progress--small"
  id="small-circular-progress"
  role="progressbar"
>
  <svg
    class="rmd-circular-progress__svg rmd-circular-progress__svg--indeterminate"
    viewBox="0 0 66 66"
  >
    <circle
      class="rmd-circular-progress__circle rmd-circular-progress__circle--indeterminate"
      cx="33"
      cy="33"
      r="30"
    />
  </svg>
</span>
`;
